--- a/angular.json
+++ b/angular.json
@@ -89,9 +89,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": []
+            "scripts": [
+          
+            ]
           }
         },
         "lint": {
